# cpp-compile-time-reflect

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  struct_id.cpp
include/reflect/: reflect.hpp
reflect/: hash.hpp
tests/: CMakeLists.txt  sdbm_hash.cpp  struct_id.cpp
